fix overflow bug with Panels

--- a/source/stylesheets/components/_panel.scss
+++ b/source/stylesheets/components/_panel.scss
@@ -3,7 +3,7 @@
   padding: 0; 
   @include border-radius(2px);
   @include box-shadow(inset 0 0 0px 1px transparentize($light-text,.75));
-  overflow: hidden;
+  // overflow: hidden;
   @include trailer(2);
 }
 .panel-heading{
